# uialpha_pars

./: .gitignore  CMakeLists.txt  README.md
include/: consolecp.h  database.h  getdate.h  logparser.h  logreader.h  mainwin.h  pcout.h  textprotocol.h  threadsafe_queue.h
src/: CMakeLists.txt  database.cpp  getdate.cpp  logparser.cpp  logreader.cpp  main.cpp  mainwin.cpp
